clusters/k4/kubernetes/apps/kube-system/coredns/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: coredns
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  egress:
    - toEntities:
        - host
    - toCIDRSet:
        - cidrGroupRef: lan
